--- a/ds_config.json
+++ b/ds_config.json
@@ -1,13 +1,9 @@
 {
     "zero_optimization": {
-        "stage": 3,
-            "offload_optimizer": {
-                "device": "cpu",
-                "pin_memory": true
-            }
+        "stage": 3
     },
-    "gradient_accumulation_steps": 1,
-    "train_micro_batch_size_per_gpu": 1,
+    "gradient_accumulation_steps": "auto",
+    "train_micro_batch_size_per_gpu": "auto",
     "gradient_clipping": 1.0,
     "bf16": {
         "enabled": true
